Websocket: 1.Setting up the WebSocket server 2.Sending and receiving messages 3.Multi-room & 1 on 1 chats.
