# backend/internal/infra/http/requests/user_request.go
@@ -5,6 +5,11 @@ import (
 )
 
 type UserRequest struct {
+	Name    string `json:"name" validate:"required"`
+	ImageId int64  `json:"imageId"`
+}
+
+type UserRegistrationRequest struct {
 	Password string `json:"password" validate:"required,alphanum,gte=6"`
 	Name     string `json:"name" validate:"required"`
 }
@@ -14,11 +19,7 @@ type ChangePasswordRequest struct {
 	NewPassword string `json:"newPassword" validate:"required,alphanum,gte=6"`
 }
 
-type ChangeLoginRequest struct {
-	NewName string `json:"newName" validate:"required"`
-}
-
-func (r UserRequest) ToDatabaseModel() (database.User, error) {
+func (r UserRegistrationRequest) ToDatabaseModel() (database.User, error) {
 	return database.User{
 		Password: r.Password,
 		Name:     r.Name,
